# Cadenza

./: .gitignore  C.ARDAS-RUDY1.S919.STY  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CULY-ext.STY  IMPLEMENTED.md  NOTICE  README.md  build-mac.sh  build.bat
.github/workflows/: macos.yml  windows.yml
Source/: ApplicationState.cpp  ApplicationState.h  BridgeRouter.cpp  BridgeRouter.h  Main.cpp  MainComponent.cpp  MainComponent.h  MusicalTiming.h
Source/Ai/: StyleGenerator.cpp  StyleGenerator.h
Source/Arranger/: DrumKeyMap.cpp  DrumKeyMap.h  MidiStyleConverter.cpp  MidiStyleConverter.h  OtsRecall.h  PatternNoteMerge.cpp  PatternNoteMerge.h  PatternTransposer.cpp  PatternTransposer.h  PlaybackDiagnostics.cpp  PlaybackDiagnostics.h  RuntimePlayback.cpp  RuntimePlayback.h  SectionButtons.cpp  SectionButtons.h  SectionChangeQueue.cpp  SectionChangeQueue.h  SectionFlow.cpp  SectionFlow.h  Song.cpp  Song.h  SongLoader.cpp  SongLoader.h  SongPlayer.cpp  SongPlayer.h  StyParser.cpp  StyParser.h  Style.cpp  Style.h  StyleChangeQueue.cpp  StyleChangeQueue.h  StyleEngine.cpp  StyleEngine.h  StyleLibraryIndex.cpp  StyleLibraryIndex.h  StyleLoader.cpp  StyleLoader.h  StyleRecorder.cpp  StyleRecorder.h
Source/Audio/: AudioBlockPipeline.h  AudioEngine.cpp  AudioEngine.h  ChordAnalysis.cpp  ChordAnalysis.h  MasterCompressor.cpp  MasterCompressor.h  MasterEq.cpp  MasterEq.h  MasterGlue.cpp  MasterGlue.h  Metronome.cpp  Metronome.h  MidiChannel.cpp  MidiChannel.h  MixerModel.cpp  MixerModel.h  PluginHost.cpp  PluginHost.h  PolishedMaster.cpp  PolishedMaster.h  SynthEngine.cpp  SynthEngine.h  Transport.cpp  Transport.h  TransportCommandMailbox.cpp  TransportCommandMailbox.h  VoiceMap.cpp  VoiceMap.h
Source/Json/: Json.cpp  Json.h
Source/Midi/: ArrangerMidiRouter.cpp  ArrangerMidiRouter.h  ChordRecognizer.cpp  ChordRecognizer.h  ChordTypes.cpp  ChordTypes.h  GmInstruments.cpp  GmInstruments.h  LiveMelodyVoice.cpp  LiveMelodyVoice.h  MidiControlMap.cpp  MidiControlMap.h  MidiRouter.cpp  MidiRouter.h  RightHand.cpp  RightHand.h
Source/Settings/: SettingsStore.cpp  SettingsStore.h
Source/UI/: CadenzaLookAndFeel.cpp  CadenzaLookAndFeel.h  FirstLaunchAssistant.cpp  FirstLaunchAssistant.h  FirstLaunchChecklist.cpp  FirstLaunchChecklist.h  NativePanel.cpp  NativePanel.h  StylePartBarWorkflow.cpp  StylePartBarWorkflow.h  StylePartEditor.cpp  StylePartEditor.h  StylePartNoteWorkflow.cpp  StylePartNoteWorkflow.h  StylePartPatternImport.cpp  StylePartPatternImport.h  StylePartPianoRoll.cpp  StylePartPianoRoll.h  StylePartPianoRollGeometry.cpp  StylePartPianoRollGeometry.h
Source/UI/PianoRoll/: PConstants.h
docs/: BUILDING.md  CADENZA_RUNTIME_AUDIT.md  CASM_NOTES.md  DRUM_PLAYBACK_AUDIT.md  GIGLAD_ARCHITECTURE.md  LIVE_PLAYBACK_VS_EXPORT_AUDIT.md  NOTE_TRANSPOSITION_FIDELITY_STUDY.md  QUICK_START.md  README.md  RUNTIME_PLAYBACK_FIXES.md  SESSION_2026-06-13.md  SOUND_SETUP.md  STATUS.md  STY_CONVERSION.md  VOICE_MAP_DESIGN.md  YAMAHA_PLAYBACK_POLICY.md  YAMAHA_XG_DRUM_MAP.md
dsp/presets/: chorus_presets.json  compressor_presets.json  delay_presets.json  eq_presets.json  guitar_amp_presets.json  reverb_presets.json
resources/: Cadenza.icns
resources/factory/songs/: demo.csong
resources/factory/styles/: 8-beat-pop.cstyle  kingston-town.cstyle  mj-billie-jean.cstyle  mj-disco-funk.cstyle  modern-pop.cstyle  ochii-verzi.cstyle  rock-n-roll.cstyle
resources/web/: Cadenza Workstation.html
resources/web/css/: arranger.css  mixer-editor.css  workstation.css
resources/web/js/: workstation.js
scripts/: package.ps1  setup-sound.ps1
tests/: AiStyleValidationTests.cpp  ArrangerMidiRouterTests.cpp  AudioBlockPipelineTests.cpp  AudioChordAnalysisTests.cpp  BridgeRouterTests.cpp  ChordRecognizerTests.cpp  DrumKeyMapTests.cpp  FirstLaunchChecklistTests.cpp  GmInstrumentsTests.cpp  JsonTests.cpp  LiveMelodyVoiceTests.cpp  MasterCompressorTests.cpp  MidiControlMapTests.cpp  MidiStyleConverterTests.cpp  MixerModelTests.cpp  OctaveRoutingTests.cpp  OtsRecallTests.cpp  PatternTransposerTests.cpp  PolishedMasterTests.cpp  RightHandTests.cpp  RuntimePlaybackTests.cpp  SectionButtonsTests.cpp  SectionChangeQueueTests.cpp  SectionFlowTests.cpp  SettingsStoreTests.cpp  SongLoaderTests.cpp  SongPlayerTests.cpp  StyleChangeQueueTests.cpp  StyleLoaderTests.cpp  StylePartBarWorkflowTests.cpp  StylePartNoteWorkflowTests.cpp  StylePartPatternImportTests.cpp  StylePartPianoRollTests.cpp  StyleRecorderTests.cpp  StyleSoundCorrectnessTests.cpp  TransportCommandMailboxTests.cpp  TransportTests.cpp  VoiceMapTests.cpp
tests/fixtures/: style-probe-note-range.cstyle  style-probe-one-warning.cstyle  style-probe-shared-drums.cstyle  style-probe-two-warnings.cstyle
tools/ab-transpose/: main.cpp
tools/plugin-probe/: main.cpp
tools/sty-converter/: StyParserTests.cpp  main.cpp
tools/style-probe/: main.cpp
tools/style-scan/: main.cpp
